--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ $(function(){
      <div class="row kotak">
 	 <h4><center><img src="img/example_folder.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/hinanotev2.png" width="100%" alt="Hinako Note Folder Icon"></a>
+               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/HinaNotev2.png" width="100%" alt="Hinako Note Folder Icon"></a>
 			   </li>
             </ul>
 		
@@ -194,7 +194,7 @@ $(function(){
                <div class="col-xs-12" style="padding:0; margin:0;">
    <center><img src="img/example_folder.png" alt="Contoh Folder" width="70%"></center>
                   <a href="special/special_2.html">
-                     <img src="img/hinanote.png" width="100%">
+                     <img src="img/HinaNote.png" width="100%">
                   </a>
                </div>
             </div>
@@ -237,7 +237,7 @@ $(function(){
       <hr>
          
          <div class="row pd15">
-            <h4><center><img src="img/twitter.png" alt="TWITTER" width="35%"><center></h4>
+            <h4><center><img src="img/Twitter.png" alt="TWITTER" width="35%"><center></h4>
             <div id="timeline">
                <a class="twitter-timeline" data-chrome="noheader nofooter  background-color: transparent;" data-theme="dark" width="100%" height="400" href="https://twitter.com/irzie_">
                Tweets by irzie_</a>
