--- a/newsv2/index.html
+++ b/newsv2/index.html
@@ -167,7 +167,7 @@ hr{
      <div class="row kotak">
 	 <h4><center><img src="img/example_folder.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/hinanotev2.png" width="100%" alt="Hinako Note Folder Icon"></a>
+               <li><a href="#" target="_blank"><img src="img/HinaNotev2.png" width="100%" alt="Hinako Note Folder Icon"></a>
 			   </li>
             </ul>
 		
