--- a/newsv2/rokudenahi-v2.html
+++ b/newsv2/rokudenahi-v2.html
@@ -122,7 +122,7 @@ hr{
         
          <div class="collapse navbar-collapse navbar-inverse" id="defaultNavbar1">
             <ul class="nav navbar-nav">
-    <li><a href="newsv2/index.html">NEWS </a></li>
+    <li><a href="news/index.html">NEWS </a></li>
                <li><a href="#">ABOUT</a></li>
                <li><a href="#">FOLDER ICON</a></li>
                <li><a href="#">PROJECT</a></li>
@@ -167,7 +167,7 @@ hr{
      <div class="row kotak">
 	 <h4><center><img src="img/example_folder.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/hinanotev2.png" width="100%" alt="Hinako Note Folder Icon"></a>
+               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/HinaNotev2.png" width="100%" alt="Hinako Note Folder Icon"></a>
 			   </li>
             </ul>
 		
