--- a/newsv2/rokudenahi-v2.html
+++ b/newsv2/rokudenahi-v2.html
@@ -246,6 +246,7 @@ Ikon folder dari anime Rokudenashi Majutsu Kyoushitsu Akashic Record.<br>
 		</div>
 		<!-- △ rightBlcr -->
 </div></div></div>
+<div class="container">
 
 <div id="disqus_thread"></div>
 <script>
@@ -266,7 +267,8 @@ s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<noscript>Silakan aktifkan javascript untuk melihat <a href="https://disqus.com/?ref_noscript">komentar yang ditenagai oleh Disqus.</a></noscript>
+	</div>
 <footer>
 
    <div class="footer-sns">
