--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@ $(function(){
 			<section id="right-news-inner">
 				<dl>
 					<!-- ニュース -->
-						<dt>30 Mei 2017</dt>
+						<dt>01 Mei 2017</dt>
 		<dd><a href="#">Anime Folder Icon Satanichia Kurumizawa McDowell.</a></dd>
-	<dt>01 Mei 2017</dt>
+	<dt>29 April 2017</dt>
 		<dd><a href="#">Penambahan Kategori & Perubahan Desain Tanggal.</a></dd>
 					<dt>28 April 2017</dt>
 		<dd><a href="newsv2/rokudenahi-v2.html">Anime Folder Icon Rokudenashi Majutsu Kyoushitsu Akashic Record v2</a></dd>
