--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ $(function(){
      <div class="row kotak">
 	 <h4><center><img src="img/latest.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
+               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
 			   </li>
             </ul>
 		
@@ -194,7 +194,7 @@ $(function(){
                <div class="col-xs-12" style="padding:0; margin:0;">
    <center><img src="img/latest.png" alt="Contoh Folder" width="70%"></center>
                   <a href="special/special_2.html">
-                     <img src="img/satanichia.png" width="100%">
+                     <img src="img/Satanichia.png" width="100%">
                   </a>
                </div>
             </div>
