--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $(function(){
       <hr>
          
          <div class="row pd15">
-            <h4><center><img src="img/twitter.png" alt="TWITTER" width="35%"><center></h4>
+            <h4><center><img src="img/Twitter.png" alt="TWITTER" width="35%"><center></h4>
             <div id="timeline">
                <a class="twitter-timeline" data-chrome="noheader nofooter  background-color: transparent;" data-theme="dark" width="100%" height="400" href="https://twitter.com/irzie_">
                Tweets by irzie_</a>
