--- a/newsv2/rokudenahi-v2.html
+++ b/newsv2/rokudenahi-v2.html
@@ -1,10 +1,10 @@
 
 
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="id">
 <head>
 <meta charset="utf-8">
-<title>Irvan Fauzi</title>
+<title>Kunime - Rokudenashi Icon</title>
 
 <meta name="description" content="Contoh Portal Irvan Fauzi">
 <meta name="keywords" content="Contoh Prtal Irvan Fauzi">
