--- a/newsv2/rokudenahi-v2.html
+++ b/newsv2/rokudenahi-v2.html
@@ -154,12 +154,12 @@ hr{
          <div id="left-menu-nav">           
             
             <ul>
-               <li id="nav_news"><a href="news/index.html"><img src="img/news.png" alt="Berita"></a></li>
-               <li><a href="http://machiavellism-anime.jp/onair/"><img src="img/introduce.png" alt="Tentang"></a></li>
-               <li><a href="http://machiavellism-anime.jp/character/"><img src="img/folder_icon.png" alt="Ikon Folder Anime"></a></li>
-               <li><a href="http://machiavellism-anime.jp/bd/"><img src="img/project.png" alt="Proyek"></a></li>
-			   <li><a href="http://machiavellism-anime.jp/story/"><img src="img/request.png" alt="Permintaan"></a></li>
-			   <li><a href="http://machiavellism-anime.jp/staff/"><img src="img/kunime.png" alt="Blog Ulasan"></a></li>
+               <li id="nav_news"><a href="irzie.github.io/portal"><img src="img/news.png" alt="Berita"></a></li>
+               <li><a href="#"><img src="img/introduce.png" alt="Tentang"></a></li>
+               <li><a href="#"><img src="img/folder_icon.png" alt="Ikon Folder Anime"></a></li>
+               <li><a href="#"><img src="img/project.png" alt="Proyek"></a></li>
+			   <li><a href="#"><img src="img/request.png" alt="Permintaan"></a></li>
+			   <li><a href="#"><img src="img/kunime.png" alt="Blog Ulasan"></a></li>
      
             </ul>
          </div>
@@ -167,7 +167,7 @@ hr{
      <div class="row kotak">
 	 <h4><center><img src="img/latest.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="#" target="_blank"><img src="img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
+               <li><a href="#" target="_blank"><img src="https://raw.githubusercontent.com/irzie/portal/master/img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
 			   </li>
             </ul>
 		
