--- a/newsv2/rokudenahi-v2.html
+++ b/newsv2/rokudenahi-v2.html
@@ -122,7 +122,7 @@ hr{
         
          <div class="collapse navbar-collapse navbar-inverse" id="defaultNavbar1">
             <ul class="nav navbar-nav">
-    <li><a href="newsv2/index.html">NEWS </a></li>
+    <li><a href="https://irzie.github.io/portal/newsv2/index.html">NEWS </a></li>
                <li><a href="#">ABOUT</a></li>
                <li><a href="#">FOLDER ICON</a></li>
                <li><a href="#">PROJECT</a></li>
@@ -154,7 +154,7 @@ hr{
          <div id="left-menu-nav">           
             
             <ul>
-               <li id="nav_news"><a href="irzie.github.io/portal"><img src="img/news.png" alt="Berita"></a></li>
+               <li id="nav_news"><a href="https://irzie.github.io/portal/newsv2/index.html"><img src="img/news.png" alt="Berita"></a></li>
                <li><a href="#"><img src="img/introduce.png" alt="Tentang"></a></li>
                <li><a href="#"><img src="img/folder_icon.png" alt="Ikon Folder Anime"></a></li>
                <li><a href="#"><img src="img/project.png" alt="Proyek"></a></li>
