--- a/newsv2/index.html
+++ b/newsv2/index.html
@@ -168,7 +168,7 @@ hr{
      <div class="row kotak">
 	 <h4><center><img src="https://raw.githubusercontent.com/irzie/portal/master/img/latest.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="#" target="_blank"><img src="img/https://raw.githubusercontent.com/irzie/portal/master/img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
+               <li><a href="#" target="_blank"><img src="https://raw.githubusercontent.com/irzie/portal/master/img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
 			   </li>
             </ul>
 		
@@ -218,7 +218,7 @@ hr{
 </div>	
 	<div class="newsBox">
 <a href='detail_13.htm'>
-<div class="img" style="background-image:url(https://raw.githubusercontent.com/irzie/portal/blob/master/img/update.jpg"></div>
+<div class="img" style="background-image:url(https://raw.githubusercontent.com/irzie/portal/master/img/update.jpg"></div>
 <dl>
 <icon_list>Update UI</icon_list>
 <dd>Penambahan Kategori & Perubahan desain tanggal.</dd><br>
