--- a/newsv2/index.html
+++ b/newsv2/index.html
@@ -206,7 +206,7 @@ hr{
 					<div class="newsTxtarea">
 					
 				<div class="newsBox">
-<a href='detail_13.htm'>
+<a href='https://irzie.github.io/portal/newsv2/satanichia.html'>
 <div class="img" style="background-image:url(https://raw.githubusercontent.com/irzie/portal/master/img/Satanichia.png)"></div>
 <dl>
 <icon_list>Anime Folder Icon</icon_list>
