--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ $(function(){
 				<dl>
 					<!-- ニュース -->
 						<dt>01 Mei 2017</dt>
-		<dd><a href="#">Anime Folder Icon Satanichia Kurumizawa McDowell.</a></dd>
+		<dd><a href="https://irzie.github.io/portal/newsv2/satanichia.html">Anime Folder Icon Satanichia Kurumizawa McDowell.</a></dd>
 	<dt>29 April 2017</dt>
 		<dd><a href="#">Penambahan Kategori & Perubahan Desain Tanggal.</a></dd>
 					<dt>28 April 2017</dt>
