--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ $(function(){
      <div class="row kotak">
 	 <h4><center><img src="img/latest.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="shoten.kadokawa.co.jp/sp/2014/machiavellism/machiavellism.html" target="_blank"><img src="img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
+               <li><a href="https://irzie.github.io/portal/newsv2/satanichia.html" target="_blank"><img src="img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
 			   </li>
             </ul>
 		
