--- a/newsv2/index.html
+++ b/newsv2/index.html
@@ -168,7 +168,7 @@ hr{
      <div class="row kotak">
 	 <h4><center><img src="https://raw.githubusercontent.com/irzie/portal/master/img/latest.png" alt="Contoh Folder" width="80%"></center></h4>
 	     <ul>
-               <li><a href="#" target="_blank"><img src="https://raw.githubusercontent.com/irzie/portal/master/img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
+               <li><a href="https://irzie.github.io/portal/newsv2/satanichia.html" target="_blank"><img src="https://raw.githubusercontent.com/irzie/portal/master/img/Satanichiav2.png" width="100%" alt="Satanichia Folder Icon"></a>
 			   </li>
             </ul>
 		
